[package]
name = "enquirer"
version = "0.6.0"
authors = ["Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"]
edition = "2018"
description = "Command line utility for stylish interactive prompts"
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/termapps/enquirer"
readme = "README.md"
license = "MIT"
include = ["src/**/*.rs", "Cargo.toml", "LICENSE", "*.md"]

[dependencies]
dialoguer = "0.10.0"
clap = { version = "~3.0.0", features = ["derive"] }

[[bin]]
name = "enquirer"
path = "src/main.rs"

[profile.release]
lto = "thin"
