[package]
name = "enquirer"
version = "0.6.1"
authors = ["Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"]
edition = "2018"
description = "Command line utility for stylish interactive prompts"
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/termapps/enquirer"
readme = "README.md"
license = "MIT"
include = ["src/**/*.rs", "Cargo.toml", "LICENSE", "*.md"]

[dependencies]
dialoguer = "0.10.0"
clap = { version = "~3.1.0", features = ["derive", "wrap_help"] }

[[bin]]
name = "enquirer"
path = "src/main.rs"

[profile.release]
lto = "thin"

[workspace.metadata.workspaces]
no_individual_tags = true
