[package]
name    = "enquirer"
version = "0.6.1"

authors     = ["Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"]
description = "Command line utility for stylish interactive prompts"
homepage    = "https://github.com/termapps/enquirer"
repository  = "https://github.com/termapps/enquirer"

edition      = "2018"
rust-version = "1.67.0"

categories = ["command-line-utilities"]
license    = "MIT"
readme     = "README.md"

[dependencies]
clap      = { version = "~4.1.8", features = ["derive", "wrap_help"] }
dialoguer = "0.10.0"

[[bin]]
name = "enquirer"
path = "src/main.rs"

[profile.release]
lto = "thin"

[workspace.metadata.workspaces]
no_individual_tags = true
